<?xml version="1.0"?>
<package format="2">
  <name>ar2_driver</name>
  <version>0.0.1</version>
  <description>
    <p>ROS driver for AR2 6-axis robot</p>
    <p>This package contains launch files and a control panel to jog/program the robot</p>
  </description>
  <author>Chris Annin, Dennis Ding</author>
  <maintainer email="xuchu.ding@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>roscpp</depend>
  <depend>roslaunch</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <exec_depend>ar2</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>